fixed spacing, trying to push to page for feedback

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  padding-top: 15px;
+  padding-top: 25px;
 }
 
 .links {
